webapp/daemonset/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress-controller
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: nginx-ingress-controller
  template:
    metadata:
      labels:
        name: nginx-ingress-controller
    spec:
      # nodeSelector:
      #   role: nginx-ingress
      serviceAccountName: nginx-ingress-serviceaccount
      containers: 
      - image: nginxdemos/nginx-ingress:1.1.1 
        imagePullPolicy: Always
        name: nginx-plus-ingress
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        - containerPort: 8080
          hostPort: 8080
        args:
          - -v=3
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
