webapp/daemonset/nginx-ingress-rules.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.syseleven.de
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-svc 
          servicePort: http
